# axon

./: .gitignore  CHANGELOG.md  LICENSE  README.md  install.sh  policy.yaml  pyproject.toml
.github/workflows/: deploy-site.yml
assets/: hero-prompt.json  social-card-prompt.json
axon/: __init__.py  artifacts.py  cli.py  context.py  default_policy.yaml  dispatch.py  loop.py  policy.py  session.py
axon/tools/: __init__.py  control.py  fs.py  subagent.py
eval/: ENVIRONMENT.md  PROTOCOL.md  _build_tasks.py  run_eval.py  sweep_pass1.sh
eval/tasks/A1_pagination/: input.md  meta.json  verify.sh
eval/tasks/A2_dates/: input.md  meta.json
eval/tasks/A3_mutable_default/: input.md  meta.json
eval/tasks/A4_counter/: input.md  meta.json
eval/tasks/B1_slugify/: input.md  meta.json
eval/tasks/B2_health/: input.md  meta.json
eval/tasks/B3_cli_json/: input.md  meta.json
eval/tasks/B4_retry/: input.md  meta.json
eval/tasks/C1_extract_helper/: input.md  meta.json
eval/tasks/C2_rename/: input.md  meta.json  verify.sh
eval/tasks/D1_tax_rate/: input.md  meta.json
examples/: fix_bug.py
localgravity/: __init__.py  artifacts.py  cli.py  client.py  context.py  dispatch.py  loop.py  policy.py  prompt.py  session.py
localgravity/tools/: fs.py  shell.py
results/_d2_check/: runs.jsonl  summary.json
results/gemma4_26b_temp0.0_harness/: runs.jsonl
results/qwen3.6_35b-a3b-q4_K_M_temp0.0_harness/: runs.jsonl
site/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json
tests/: test_loop.py  test_policy.py  test_redundancy.py
(+41 files in other folders)
