[project]
name = "axon"
version = "0.1.0"
description = "A local coding agent that recreates Google Antigravity's plan-tool-verify pattern, powered by Gemma 4 via Ollama. No Gemini API, no cloud, no code egress."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Alfredo Bonilla" }]
dependencies = [
    "pyyaml>=6.0",
]
# The Ollama backend is reached over its HTTP API with stdlib urllib — no client
# library needed. PyYAML is the only runtime dependency.

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
axon = "axon.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["axon*"]

[tool.setuptools.package-data]
axon = ["default_policy.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]   # seed repos under eval/tasks/ are fixtures, not tests to collect
